tests/ui/pub/pub-ident-struct-4.stderr
error: missing `struct` for struct definition
  --> $DIR/pub-ident-struct-4.rs:3:1
   |
LL | pub T(#[allow(dead_code)] String);
   | ^^^^^
   |
help: add `struct` here to parse `T` as a struct
   |
LL | pub struct T(#[allow(dead_code)] String);
   |     ++++++

error: aborting due to 1 previous error

