tests/ui/pub/pub-ident-struct-4.rs
//@ run-rustfix

pub T(#[allow(dead_code)] String);
//~^ ERROR missing `struct` for struct definition

fn main() {}
